# llvm-compiler-pass

./: CMakeLists.txt  Helpers.cpp  Helpers.hpp  README.md  TaintTracker.cpp  auto_run.sh  run_on_modules.sh
include/: Helpers.hpp  TaintTracker.hpp
src/: Helpers.cpp  TaintTracker.cpp
testcases/: advanced_aliasing1.c  advanced_aliasing2.ll  aliasing.ll  array_index_sensitivity.c  array_index_sensitivity.ll  basic_aliasing.c  func_propagation.c  func_propagation.ll  primer_test.c  primer_test.ll  simple_struct_propagation.ll  struct_propagation.c  struct_propagation.ll  union.c  vuln_simple.c  vuln_simple.ll
testcases/Function Call Propagation/: glob_func_taint.c  param_to_ret_echo.c  pointers_cross_funcs.c  recursive_funcs.c  ret_flow_simple.c  ret_flow_simple_static.c  structs_cross_func.c
testcases/Function Call Propagation (Function Tainting)/: func_propagation.ll
testcases/Kernel Module Test Cases/: km_basic.c  km_function_taint01.c  km_function_taint02.c  km_get_user_taint01.c  km_pointer_alias.c  (+3 more)
testcases/Kernel Module Test Cases (Low-Level Interaction)/: km_function_taint03.c  km_struct_pointer_alias_01.c  km_struct_pointer_alias_02.c  km_struct_taint01.c
testcases_ll/: array_index_sensitivity2.ll  array_index_sensitivity3.ll  array_of_structs.ll  binary_operations.ll  glob_func_taint.ll  inner_field.ll  param_to_ret_echo.ll  pointers_cross_funcs.ll  recursive_funcs.ll  ret_flow_simple.ll  ret_flow_simple_static.ll  structs_and_pointers.ll  structs_cross_func.ll  taint_struct_array.ll  union_basic.ll  union_struct_pointer.ll  unions_and_pointers.ll
(+17 files in other folders)
